<resources>
    <string name="app_name">TCMconstitutionNursing</string>
    <string name="welcome">欢迎使用中医体质护理APP</string>
    <string name="register">注册</string>
    <string name="log_in">登录</string>
    <string name="user_name">用户名</string>
    <string name="pass_word">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    //注册页
    <string name="account">账号</string>
    <string name="confirm">密码确认</string>
    <string name="phone">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="Software_license">已阅读并同意《软件许可及服务协议》</string>
    <string name="agree">同意</string>
    <string name="cancel">返回</string>
    <string name="confirmReset">确认重置</string>
</resources>